# new_ws

./: README.md
IIOT Lab/lb1/: 220929270_Meet.docx
IIOT Lab/lb2/: 220929270_Meet.docx  e1.pkt  e2.pkt  ex1.pkt
IIOT Lab/lb3/: 220929270_Meet.docx  e1.pkt  e2.pkt  ex1.pkt
IIOT Lab/lb4/: 220929270_Meet.docx  ~$0929270_Meet.docx
IIOT Lab/lb4/ex1/: ex1.ino
IIOT Lab/lb5/: 220929254_Tanirika.docx  220929270_Meet.docx
IIOT Lab/lb5/ex1/: ex1.ino
IIOT Lab/lb6/: 220929270_Meet.docx
codes/: triangle.py
codes/three_wheel/: circle.py  square.py
codes/turtlebot3/: turtlebot3_world.launch.py
codes/turtlesim/: spiral.py
manual/: Lab 1.docx  Lab8.odt
manual/models/Ball/: Ball.sdf  model.config
manual/models/city/: model.sdf
manual/models/drone_again/: drone_again.sdf  model.config
manual/models/floor/: model.config  model.sdf
manual/models/ocean/: model.sdf
manual/models/parcel_box/: model.sdf
manual/models/red_line_circuit/: model.config  model.sdf
src/flood_pkg/: package.xml  setup.cfg  setup.py
src/flood_pkg/config/: control.yaml  drone.yaml
src/flood_pkg/flood_pkg/: autonav.py  spawn_drone.py  teleop_control.py  teleop_joystick.py
src/flood_pkg/launch/: control.launch.py  drone.launch.py  dronecontrol.launch.py  flooddrone.launch.py  gazebo.launch.py  robot_state_publisher.launch.py  rviz.launch.py  try.launch.py  world.launch.py
src/flood_pkg/meshes/: building4.STL  building6.STL  fan1.STL  tree.STL
src/flood_pkg/models/: database.config
src/flood_pkg/rviz/: drone.rviz
src/flood_pkg/urdf/: city.urdf  drone_again.urdf  drone_again.urdf.xacro  old.urdf
src/flood_pkg/world/: flooded_city.world  flooded_city_with_drone.world  playground.world
src/lab4/: package.xml  setup.py
src/lab4/lab4/: 4wheel_move_robot.py
src/lab4/launch/: 4wheelgazebo.launch.py  4wheelrviz.launch.py  gazebo.launch.py  rviz.launch.py
src/lab4/urdf/: four_wheeled_robot.urdf  three_wheeled_robot.urdf
src/lab6/: package.xml  setup.py
src/lab6/lab6/: capture_image.py  extract_redroad.py  extract_road.py  line_follow.py  red_line_follow.py
src/lab6/launch/: gazebo.launch.py  rviz.launch.py
src/lab6/meshes/: red_line.STL
src/lab6/urdf/: car.urdf
src/lab7/: package.xml  setup.py
src/lab7/config/: control.yaml
src/lab7/launch/: car.launch.py  gazebo.launch.py  rviz.launch.py
src/lab7/meshes/: chasis.STL  front_axle.STL  rear_axle.STL  spoiler.STL
src/lab7/rviz/: car.rviz
src/lab7/urdf/: car.urdf  car_rviz.urdf
src/lab8/: package.xml  setup.py
src/lab8/launch/: cartographer.launch.py  empty_world.launch.py  navigation2.launch.py  robot.launch.py  robot_state_publisher.launch.py  rviz2.launch.py  spawn_turtlebot3.launch.py  turtlebot3_customworld.launch.py  turtlebot3_dqn_stage4.launch.py  turtlebot3_house.launch.py  turtlebot3_state_publisher.launch.py
src/lab8/rviz/: nav2_default_view.rviz
src/lab8/urdf/: turtlebot3_burger.urdf  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.urdf
src/lab8/worlds/: custom.world  custom_map.world  custom_world.world
src/link_test/: package.xml  setup.cfg  setup.py
src/link_test/launch/: ur5_control.launch.py  ur5_gazebo.launch.py  ur5_rviz.launch.py
src/link_test/rviz/: ur5.rviz
src/link_test/urdf/: ur5.urdf
src/mecanum_drive_plugin/: CMakeLists.txt  package.xml
src/mecanum_drive_plugin/src/: mecanum_drive_plugin.cpp
src/mecanum_robot_controller/: CMakeLists.txt  package.xml
src/mecanum_robot_controller/include/mecanum_robot_controller/: mecanum_robot_plugin.hpp
src/mecanum_robot_controller/src/: mecanum_robot_plugin.cpp
src/mecanum_robot_plugin/: CMakeLists.txt  package.xml
src/mecanum_robot_plugin/include/mecanum_robot_plugin/: combined_mecanum_plugin.hpp
src/mecanum_robot_plugin/src/: combined_mecanum_plugin.cpp
src/my_package/: package.xml  setup.py
src/project/: package.xml  setup.py
src/project/urdf/: Ball.urdf  (+4 more)
src/reinforcement_learning/: CMakeLists.txt  package.xml
src/turtle_control/: package.xml  setup.py
src/ur5_tutorial/: package.xml  setup.py
src/urdf_tutorial/: package.xml  setup.py
(+90 files in other folders)
